<?xml version="1.0"?>
<package format="3">
  <name>abb_egm_msgs</name>
  <version>1.0.0</version>
  <description>
    Provides ROS2 message definitions, representing Externally Guided Motion (EGM) data from ABB robot controllers.
  </description>
  <license>BSD-3-Clause</license>
  <maintainer email="gbartyzel@hotmail.com">Grzegorz Bartyzel</maintainer>
  <author>Jon Tjerngren</author>
  <author>Grzegorz Bartyzel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
